--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Reflux HTML CSS Template</title>
+    <title>Online Portfolio of Klarence Nicolas Catalan</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
